--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@
     src: url(https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap);
 }
 
+hr {
+    margin-right: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .container-100 {
     height: 100vh;
     display: flex;
@@ -41,10 +47,95 @@
     background-color: #141922;
 }
 
+.bg-blue-2 {
+    background-color: #080b12;
+}
+
+.bg-grey {
+    background-color: #282828;
+    min-height: 50px;
+}
+
 .fontwhite {
     color: white
 }
 
 .fontgrey {
     color: #777b7f;
+}
+
+.fontblack {
+    color: black;
+}
+
+.fontsmall {
+    font-size: 12px;
+}
+
+.list-none {
+    list-style: none;
+    line-height: 35px;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    width: 250px;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
+
+.logo {
+    width: 135px;
+}
+
+.playlist {
+    flex-grow: 1;
+}
+
+.side-icons {
+    width: 25px;
+}
+
+.new-playlist {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.plus-bg {
+    background-color: #a3a3a3;
+    padding: 5px 5px;
+}
+
+.arrow-bg {
+    border: 1px solid #a3a3a3;
+    border-radius: 50%;
+    padding: 2px 5px;
+    margin-right: 8px;
+}
+
+.user-bg {
+    background-color:#a3a3a3;
+    border-radius: 50%;
+    padding: 1px;
+    margin-right: 8px;
+}
+
+.top-bar {
+    display: flex;
+    justify-content: flex-end;
+    flex-shrink: 0;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 20px;
+}
+
+.upgrade {
+    color: white;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 5px 20px;
 }
