--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ hr {
     overflow: hidden;
 }
 
+.overflow {
+    overflow: auto;
+}
+
 .flex-shrink {
     flex-shrink: 0;
 }
@@ -120,7 +124,7 @@ hr {
 .user-bg {
     background-color:#a3a3a3;
     border-radius: 50%;
-    padding: 1px;
+    padding: 3px 5px;
     margin-right: 8px;
 }
 
@@ -138,4 +142,27 @@ hr {
     border: 1px solid white;
     border-radius: 20px;
     padding: 5px 20px;
+}
+
+.padding-main {
+    padding: 20px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding-bottom: 20px;
+}
+
+.flex-music {
+    display: flex;
+    gap: 10px;
+    padding: 20px 0;
+}
+
+.music-card {
+    height: 300px;
+    width: 200px;
+    background-color: green;
 }
