--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,23 @@ hr {
     width: 200px;
     background-color: green;
 }
+
+.card-music-played {
+    width: calc(100% / 6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 1px;
+    gap: 10px;
+}
+
+.music-div {
+    width: 200px;
+    height: 200px;
+}
+
+.music-img {
+    max-width: 100%;
+    max-height: 100%;
+}
