--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ hr {
 .sidebar {
     display: flex;
     flex-direction: column;
+    gap: 20px;
     flex-shrink: 0;
     width: 250px;
     padding-left: 15px;
@@ -93,10 +94,23 @@ hr {
 
 .logo {
     width: 135px;
+    padding-bottom: 20px;
 }
 
 .playlist {
     flex-grow: 1;
+}
+
+.icon-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.flex-space {
+    display: flex;
+    gap: 5px;
+    align-items: center;
 }
 
 .side-icons {
@@ -107,11 +121,12 @@ hr {
     display: flex;
     align-items: center;
     gap: 10px;
+    padding: 5px 0;
 }
 
 .plus-bg {
     background-color: #a3a3a3;
-    padding: 5px 5px;
+    padding: 5px 8px;
 }
 
 .arrow-bg {
