--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,5 +1,13 @@
 @media screen and (min-width: 701px) and (max-width: 1100px) {
     .card-music-played {
-        width: calc(100% / 4);
+        width: calc((100% / 4) - 20px);
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+        padding-bottom: 20px;
     }
 }
